experience cards pretty much done, just a small spacing issue on mobile

--- a/style.css
+++ b/style.css
@@ -259,15 +259,100 @@ section {
     flex-direction: column;
 }
 
+.experience-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+.experience-card-body{
+    background-color: transparent;
+    box-shadow:  24px 24px 48px #afafaf,
+    -24px -24px 48px #ffffff;
+    margin: 25px 0;
+    overflow: hidden;
+    border-radius: 35px;
+    border-color: black;
+    border-width: 20px;
+    gap: 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.experience-card-image {
+    height: auto;
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    max-height: 20vmax;
+    display: flex;
+    object-fit: cover;
+    justify-content: center;
+    padding: 3rem;
+    border-radius: 60px;
+}
+
+
+.experience-card-text {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    height: 100%;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    padding-top: 3rem;
+    width: 80vmin;
+}
+
+.experience-card-position-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.experience-position-info {
+    padding-bottom: .5rem;
+}
+
+.experience-card-description {
+    display: flex;
+    flex-direction: column;
+    white-space: pre-line;
+}
+
+.experience-card_link_boarder {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    gap: 1rem;
+    margin: 1rem;
+    background-color: #dfdfe5;
+    border-radius: 2rem;
+    height: 6vmin;
+    width: 50%;
+}
+
+.experience-card-link-text {
+    background-color: transparent;
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+    font-size: 2.5vmin;
+    padding: 0.5rem;
+}
+
 
 /* EDUCATION */
 
 #education {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
 }
-
 
 /* PROJECTS */
 
@@ -284,7 +369,7 @@ section {
     gap: 3rem;
 }
 
-.card-body{
+.project-card-body{
     background-color: #FFFFFF;
     box-shadow:  24px 24px 48px #afafaf,
     -24px -24px 48px #ffffff;
@@ -296,7 +381,7 @@ section {
     border-width: 20px;
 }
 
-.card-image {
+.project-card-image {
     border-bottom: 4px solid #dfdfe5;
     width: 45vmin;
     overflow: hidden;
@@ -306,21 +391,21 @@ section {
     justify-content: center;
 }
 
-.card-text {
+.project-card-text {
     display: flex;
     text-align: center;
     flex-direction: column;
     align-content: center;
-    height: auto;
+    height: 100%;
 }
 
-.card-description {
+.project-card-description {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.card_link_boarder {
+.project-card_link_boarder {
     display: flex;
     align-self: center;
     justify-content: center;
@@ -332,7 +417,7 @@ section {
     width: 50%;
 }
 
-.card-link-text {
+.project-card-link-text {
     background-color: transparent;
     color: black;
     text-decoration: none;
